# chatbot-poc

./: .gitignore  README.md  main.py  setup.sh  start.sh  stop.sh
backend/: .gitignore  .gitignore copy  README.md  SearchRetrieval.py  chat_logic.py  clear_db.py  env.example  main.py  pyproject.toml  requirements.txt  server.py  start.py  test_db.py  vector_db_routes.py
backend/app/: main.py
backend/app/api/: admin_auth.py  admin_dashboard.py  announcements.py  chat.py  documents.py  scraper.py
backend/app/core/: admin.py  config.py  database.py  prompts.py
backend/app/models/: chat.py  document.py
backend/app/services/: announcement_service.py  chat_service.py  document_service.py  ingest.py  scraper_service.py
backend/tests/: test_e2e.py
docs/: AI_Chat_API_Collection.json
embed/: demo.html  widget.js
export/: all.docx
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/components/: ChatWidget.css  ChatWidget.jsx  ChatWidget.module.css  Chatbot.css  Chatbot.js  Dashboard.css  Dashboard.js  Footer.jsx  HomeLayout.jsx  Layout.css  Layout.js  Login.css  Login.js  Navbar.jsx  Navbar.module.css  ProtectedRoute.jsx
frontend/src/hooks/: useToast.js
frontend/src/pages/: About.jsx  Admin.jsx  AdminLogin.jsx  AdminLogin.module.css  AdminPanel.jsx  AdminPanel.module.css  Chat.css  Chat.jsx  FAQ.jsx  Faq.css  Faq.jsx  Home.jsx  Home.module.css  InfoPage.module.css  Login.css  Login.jsx  (+4 more)
scraper/: main.py  pyproject.toml  skills-lock.json
scraper/export/: all.docx  all.md
(+26 files in other folders)
